<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:onClick="resetScore"
            android:text="@string/reset" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/teamALayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/divider"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/teamATextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/team_a"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TeamAScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/plus3Abutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="add3ToTeamA"
                    android:text="@string/_3_points"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/plus2Abutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="add2ToTeamA"
                    android:text="@string/_2_points"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/freeAthrow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addFreeThrowToTeamA"
                    android:text="@string/free_throw"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/teamBLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/divider"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/teamBTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/team_b"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/TeamBScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:id="@+id/plus3Bbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="add3ToTeamB"
                    android:text="@string/_3_pointsA"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/plus2Bbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:onClick="add2ToTeamB"
                    android:text="@string/_2_pointsA"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/freeBthrow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="addFreeThrowToTeamB"
                    android:text="@string/free_throwA"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>